--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <select name="kategoria" id="kategoria">
                     <option id="osztalyok" value="osztalyok">-- Osztályok --</option>
                 </select>
-                <input type="button" name="nyomtat id="nyomtat" value="nyomtat">
+                <input type="button" name="nyomtat" id="nyomtat" value="nyomtat">
             </form>
             <article id = "tartalom">
                 
