stilus amit tudtam

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="button" name="nyomtat" id="nyomtat" value="nyomtat">
             </form>
             <article id = "tartalom">
-                
+            <div id="grid"></div>
 
             </article>
             <footer>Hecz Klaudia, Gutyina András, Szabó Milán, Szántai Barna</footer>
